force-app/main/default/objects/Opportunity/fields/Appeal__c.field-meta.xml
<CustomField>
    <fullName>Appeal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appeal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.RecordTypeId</field>
            <operation>equals</operation>
            <value>Appeal</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>