force-app/main/default/objects/Opportunity/fields/Award_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Award_End_Date__c</fullName>
    <inlineHelpText>Only for CFR Pledges</inlineHelpText>
    <label>Award End Date</label>
    <type>Date</type>
</CustomField>