force-app/main/default/objects/Opportunity/fields/Funding_Priority_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Funding_Priority_Level_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Priority Level 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Work_Plan_Unit__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Funding Priority Level 1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Work_Plan_Unit__c</referenceTo>
    <relationshipLabel>Proposals (Funding Priority Level 1)</relationshipLabel>
    <relationshipName>Proposals_Level_1</relationshipName>
    <type>Lookup</type>
</CustomField>