force-app/main/default/objects/Opportunity/fields/Funding_Priority_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Funding_Priority_Level_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Priority Level 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Work_Plan_Unit__c.ucinn_ascendv2__Work_Plan_Unit__c</field>
            <operation>equals</operation>
            <valueField>$Source.Funding_Priority_Level_1__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Work_Plan_Unit__c</referenceTo>
    <relationshipLabel>Proposals (Funding Priority Level 2)</relationshipLabel>
    <relationshipName>Proposals_Level_2</relationshipName>
    <type>Lookup</type>
</CustomField>