force-app/main/default/objects/Opportunity/fields/Gift_In_Kind_Description__c.field-meta.xml
<CustomField>
    <fullName>Gift_In_Kind_Description__c</fullName>
    <label>Gift In Kind Description</label>
    <type>TextArea</type>
</CustomField>