force-app/main/default/objects/Opportunity/fields/Gift_in_Kind_Type__c.field-meta.xml
<CustomField>
    <fullName>Gift_in_Kind_Type__c</fullName>
    <label>Gift in Kind Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Art</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Books</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Equipment</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>Jewelry</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Real Estate</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>