force-app/main/default/objects/Opportunity/fields/Giving_Society_Codes__c.field-meta.xml
<CustomField>
    <fullName>Giving_Society_Codes__c</fullName>
    <description>Giving society affiliation codes from Contact object.</description>
    <formula>ucinn_ascendv2__Contact__r.nd_Suffix_Giving_Societies__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Giving society affiliation codes from Contact object.</inlineHelpText>
    <label>Giving Society Codes</label>
    <type>Text</type>
</CustomField>