force-app/main/default/objects/Opportunity/fields/Giving_Year__c.field-meta.xml
<CustomField>
    <fullName>Giving_Year__c</fullName>
    <defaultValue>IF($RecordType.Name  &lt;&gt; &quot;Proposal&quot;, TEXT(

IF(

MONTH(TODAY())&lt;7,

YEAR(TODAY()),

YEAR(TODAY())+1

)
),
&quot;&quot;)</defaultValue>
    <label>Giving Year (FY)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>