force-app/main/default/objects/Opportunity/fields/Knowtify_Critical__c.field-meta.xml
<CustomField>
    <fullName>Knowtify_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Knowtify Critical</label>
    <type>Checkbox</type>
</CustomField>