force-app/main/default/objects/Opportunity/fields/Knowtify_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Knowtify_End_Date__c</fullName>
    <label>Knowtify End Date</label>
    <type>Date</type>
</CustomField>