force-app/main/default/objects/Opportunity/fields/Level_of_Anonymity__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Anonymity__c</fullName>
    <inlineHelpText>Anonymous Donor - donor themselves and all commitments are anonymous
Anonymous Pledge - donor is not anonymous, but the specific pledge is
Anonymous Donor Record - anonymous donor record is linked to the Constituent and associated to the pledge (this is not visible on the Constituent&apos;s reports but linked through the anonymous donor record)</inlineHelpText>
    <label>Level of Anonymity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anonymous Donor</fullName>
            </value>
            <value>
                <fullName>Anonymous Pledge</fullName>
            </value>
            <value>
                <fullName>Anonymous Donor Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>