force-app/main/default/objects/Opportunity/fields/nd_AC_Member__c.field-meta.xml
<CustomField>
    <fullName>nd_AC_Member__c</fullName>
    <description>Indicates whether or not the constituent is an Advisory Council member.</description>
    <formula>CONTAINS(ucinn_ascendv2__Contact__r.nd_Institutional_Suffix__c,&quot;CN&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether or not the constituent is an Advisory Council member.</inlineHelpText>
    <label>AC Member</label>
    <type>Checkbox</type>
</CustomField>