force-app/main/default/objects/Opportunity/fields/nd_activePRM__c.field-meta.xml
<CustomField>
    <fullName>nd_activePRM__c</fullName>
    <description>This field tells whether the opportunity has an active PRM or not</description>
    <formula>IF(NOT(ISBLANK(Account.ucinn_ascendv2__PRM__c) ), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field tells whether the opportunity has an active PRM or not</inlineHelpText>
    <label>Has an active PRM</label>
    <type>Checkbox</type>
</CustomField>