force-app/main/default/objects/Opportunity/fields/ND_Allocated_Date__c.field-meta.xml
<CustomField>
    <fullName>ND_Allocated_Date__c</fullName>
    <defaultValue>IF($RecordType.Name  &lt;&gt; &quot;Proposal&quot;, TODAY(),NULL)</defaultValue>
    <description>Defaults to receipt date on save if no value entered</description>
    <label>Allocated Date</label>
    <type>Date</type>
</CustomField>