force-app/main/default/objects/Opportunity/fields/nd_Answer_Amount__c.field-meta.xml
<CustomField>
    <fullName>nd_Answer_Amount__c</fullName>
    <label>Answer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>