force-app/main/default/objects/Opportunity/fields/nd_Answer_Date__c.field-meta.xml
<CustomField>
    <fullName>nd_Answer_Date__c</fullName>
    <label>Answer Date</label>
    <type>Date</type>
</CustomField>