force-app/main/default/objects/Opportunity/fields/ND_Appeal__c.field-meta.xml
<CustomField>
    <fullName>ND_Appeal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Appeal Codes associated with gifts.</description>
    <inlineHelpText>Appeal Codes associated with gifts.</inlineHelpText>
    <label>ND Appeal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.RecordTypeId</field>
            <operation>equals</operation>
            <value>Appeal</value>
        </filterItems>
        <filterItems>
            <field>Campaign.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities (Appeal)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>