force-app/main/default/objects/Opportunity/fields/nd_ApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>nd_ApprovedDate__c</fullName>
    <description>This field holds the date when the opportunity stage was made as Approved</description>
    <inlineHelpText>This field holds the date when the opportunity stage was made as Approved</inlineHelpText>
    <label>ApprovedDate</label>
    <type>Date</type>
</CustomField>