force-app/main/default/objects/Opportunity/fields/nd_Beneficiary_Donor__c.field-meta.xml
<CustomField>
    <fullName>nd_Beneficiary_Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Beneficiary Donor)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>