force-app/main/default/objects/Opportunity/fields/nd_Binding_Pledge__c.field-meta.xml
<CustomField>
    <fullName>nd_Binding_Pledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Binding means ND can take legal action on a donor if they do not fulfill the pledge.</description>
    <label>Binding Pledge</label>
    <type>Checkbox</type>
</CustomField>