force-app/main/default/objects/Opportunity/fields/nd_Constituent_Status_Active__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent_Status_Active__c</fullName>
    <description>Indicates whether the Constituent on a gift has a Status of &apos;Active&apos;</description>
    <formula>ISPICKVAL(ucinn_ascendv2__Contact__r.Constituent_Status__c, &quot;A&quot;)</formula>
    <inlineHelpText>Indicates whether the Constituent on a gift has a Status of &apos;Active&apos;</inlineHelpText>
    <label>Constituent Status = Active</label>
    <type>Checkbox</type>
</CustomField>