force-app/main/default/objects/Opportunity/fields/nd_Constituent_Status_Deceased__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent_Status_Deceased__c</fullName>
    <description>Indicates whether the Constituent on a gift has a Status of &apos;Deceased&apos;</description>
    <formula>ISPICKVAL(ucinn_ascendv2__Contact__r.Constituent_Status__c, &quot;D&quot;)</formula>
    <inlineHelpText>Indicates whether the Constituent on a gift has a Status of &apos;Deceased&apos;</inlineHelpText>
    <label>Constituent Status = Deceased</label>
    <type>Checkbox</type>
</CustomField>