force-app/main/default/objects/Opportunity/fields/nd_Constituent_Type_RE_or_RC__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent_Type_RE_or_RC__c</fullName>
    <description>Indicates whether the Constituent on a gift is a Related Child or Related Entity</description>
    <formula>CONTAINS(ucinn_ascendv2__Contact__r.ucinn_ascendv2__Primary_Contact_Type__c , &quot;Related&quot;)</formula>
    <inlineHelpText>Indicates whether the Constituent on a gift is a Related Child or Related Entity</inlineHelpText>
    <label>Constituent Type = RE or RC</label>
    <type>Checkbox</type>
</CustomField>