force-app/main/default/objects/Opportunity/fields/nd_Date_After_Approved_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>nd_Date_After_Approved_Stage_Change__c</fullName>
    <description>This field holds the date when the opportunity stage was changed from Approved to its next stage</description>
    <inlineHelpText>This field holds the date when the opportunity stage was changed from Approved to its next stage</inlineHelpText>
    <label>Date After Approved Stage Change</label>
    <type>Date</type>
</CustomField>