force-app/main/default/objects/Opportunity/fields/ND_Days_from_Ask_Date__c.field-meta.xml
<CustomField>
    <fullName>ND_Days_from_Ask_Date__c</fullName>
    <description>Days from the proposal ask date.  Used for action center.</description>
    <formula>IF(!ISBLANK(ucinn_ascendv2__Submitted_Date__c),ucinn_ascendv2__Submitted_Date__c - Today(),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days from the proposal ask date.</inlineHelpText>
    <label>Days from Ask Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>