force-app/main/default/objects/Opportunity/fields/nd_daysInApproved__c.field-meta.xml
<CustomField>
    <fullName>nd_daysInApproved__c</fullName>
    <description>This field tells the number of days the opportunity is in Approved stage</description>
    <formula>IF( 
NOT (ISBLANK(nd_Date_After_Approved_Stage_Change__c)) ,
( nd_Date_After_Approved_Stage_Change__c - nd_ApprovedDate__c ),
( TODAY() - nd_ApprovedDate__c )
)</formula>
    <inlineHelpText>This field tells the number of days the opportunity is in Approved stage</inlineHelpText>
    <label>No of days in Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>