force-app/main/default/objects/Opportunity/fields/nd_daysInPending__c.field-meta.xml
<CustomField>
    <fullName>nd_daysInPending__c</fullName>
    <description>This field tells the number of days the opportunity is in Pending stage</description>
    <formula>IF( 
NOT (ISBLANK(nd_ApprovedDate__c)) ,
( nd_ApprovedDate__c- nd_PendingDate__c),
( TODAY() - nd_PendingDate__c)
)</formula>
    <inlineHelpText>This field tells the number of days the opportunity is in Pending stage</inlineHelpText>
    <label>No of days in Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>