force-app/main/default/objects/Opportunity/fields/nd_daysInPlanning__c.field-meta.xml
<CustomField>
    <fullName>nd_daysInPlanning__c</fullName>
    <description>This field tells the number of days the opportunity is in Planning stage</description>
    <formula>IF( 
NOT (ISBLANK(nd_PendingDate__c)) ,
( nd_PendingDate__c - nd_PlanningDate__c),
( TODAY() - nd_PlanningDate__c)
)</formula>
    <inlineHelpText>This field tells the number of days the opportunity is in Planning stage</inlineHelpText>
    <label>No of days in Planning</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>