force-app/main/default/objects/Opportunity/fields/nd_Deferred_Gift__c.field-meta.xml
<CustomField>
    <fullName>nd_Deferred_Gift__c</fullName>
    <description>Opportunity: Transaction type STARTS WITH Q or T OR equal to PD</description>
    <formula>OR(LEFT(TEXT(Type), 1) = &quot;Q&quot;,
			LEFT(TEXT(Type), 1) = &quot;T&quot;,
			TEXT(Type) = &quot;PD&quot;)</formula>
    <inlineHelpText>Stewardship Case Generation: Deferred Gift Flag</inlineHelpText>
    <label>Deferred Gift</label>
    <type>Checkbox</type>
</CustomField>