force-app/main/default/objects/Opportunity/fields/nd_Display_for_DC__c.field-meta.xml
<CustomField>
    <fullName>nd_Display_for_DC__c</fullName>
    <description>DC Filter for List Views</description>
    <formula>$User.Id=Owner.Development_Coordinator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DC Filter for List Views</inlineHelpText>
    <label>Display for DC</label>
    <type>Checkbox</type>
</CustomField>