force-app/main/default/objects/Opportunity/fields/nd_Display_for_GPO__c.field-meta.xml
<CustomField>
    <fullName>nd_Display_for_GPO__c</fullName>
    <description>Indicator for whether or not the opportunity owner&apos;s GPO is the logged in user</description>
    <formula>Owner.nd_Gift_Planning_Officer__c  = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator for whether or not the opportunity owner&apos;s GPO is the logged in user</inlineHelpText>
    <label>Display for GPO</label>
    <type>Checkbox</type>
</CustomField>