force-app/main/default/objects/Opportunity/fields/nd_Donor_Gift_Comments__c.field-meta.xml
<CustomField>
    <fullName>nd_Donor_Gift_Comments__c</fullName>
    <description>This is a field to capture Donor Gift Comments that come into Salesforce from Hivebrite.</description>
    <inlineHelpText>This is a field to capture Donor Gift Comments that come into Salesforce from Hivebrite.</inlineHelpText>
    <label>Donor Gift Comments</label>
    <type>TextArea</type>
</CustomField>