force-app/main/default/objects/Opportunity/fields/nd_GPO_Name__c.field-meta.xml
<CustomField>
    <fullName>nd_GPO_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GPO Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>