force-app/main/default/objects/Opportunity/fields/nd_Include_in_Timeline_Constituent__c.field-meta.xml
<CustomField>
    <fullName>nd_Include_in_Timeline_Constituent__c</fullName>
    <description>Field evaluates to TRUE if this record should appear on the Constituent Timeline component</description>
    <formula>OR(RecordType.DeveloperName = &apos;Pledge&apos;, RecordType.DeveloperName = &apos;Proposal&apos;)</formula>
    <label>Include in Timeline - Constituent</label>
    <type>Checkbox</type>
</CustomField>