force-app/main/default/objects/Opportunity/fields/nd_initial_recurring_transaction_ind__c.field-meta.xml
<CustomField>
    <fullName>nd_initial_recurring_transaction_ind__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only set true for first recurring transaction</description>
    <label>Initial Recurring Transaction Ind</label>
    <type>Checkbox</type>
</CustomField>