force-app/main/default/objects/Opportunity/fields/nd_Joint_Donor__c.field-meta.xml
<CustomField>
    <fullName>nd_Joint_Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Joint Donor)</relationshipLabel>
    <relationshipName>Opportunities_Joint_Donor</relationshipName>
    <type>Lookup</type>
</CustomField>