force-app/main/default/objects/Opportunity/fields/nd_jv_entry__c.field-meta.xml
<CustomField>
    <fullName>nd_jv_entry__c</fullName>
    <description>Fields used to create a JV that goes back to Banner.</description>
    <label>JV Entry</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>