force-app/main/default/objects/Opportunity/fields/nd_jv_status__c.field-meta.xml
<CustomField>
    <fullName>nd_jv_status__c</fullName>
    <description>Field that supports creating a JV that goes back to Banner</description>
    <label>JV Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n</fullName>
                <default>true</default>
                <label>new</label>
            </value>
            <value>
                <fullName>p</fullName>
                <label>processed</label>
            </value>
            <value>
                <fullName>f</fullName>
                <label>written to file</label>
            </value>
            <value>
                <fullName>s</fullName>
                <label>skipped</label>
            </value>
            <value>
                <fullName>e</fullName>
                <label>error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>