force-app/main/default/objects/Opportunity/fields/nd_jv_type__c.field-meta.xml
<CustomField>
    <fullName>nd_jv_type__c</fullName>
    <description>This field is used to create a JV that goes back to Banner.</description>
    <label>JV Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DV1</fullName>
            </value>
            <value>
                <fullName>DV2</fullName>
            </value>
            <value>
                <fullName>DV3</fullName>
            </value>
            <value>
                <fullName>DV4</fullName>
            </value>
            <value>
                <fullName>DV5</fullName>
            </value>
            <value>
                <fullName>DV6</fullName>
            </value>
            <value>
                <fullName>DV7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>