force-app/main/default/objects/Opportunity/fields/nd_Likelihood_to_Close__c.field-meta.xml
<CustomField>
    <fullName>nd_Likelihood_to_Close__c</fullName>
    <inlineHelpText>Percentage for confidence the donor will say yes.</inlineHelpText>
    <label>Likelihood to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>