force-app/main/default/objects/Opportunity/fields/nd_Main_Pledge_Gift__c.field-meta.xml
<CustomField>
    <fullName>nd_Main_Pledge_Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Main Pledge or Gift that split gift components should be associated with.</description>
    <inlineHelpText>This is the Main Pledge or Gift that split gift components should be associated with.</inlineHelpText>
    <label>Main Pledge/Gift</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Gift</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pledge</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Main Pledge/Gift)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>