force-app/main/default/objects/Opportunity/fields/ND_Matching_Gift_Id__c.field-meta.xml
<CustomField>
    <fullName>ND_Matching_Gift_Id__c</fullName>
    <inlineHelpText>This attribute captures the Gift ID from the Matching Gift Company when the matching gift claim is confirmed.</inlineHelpText>
    <label>Matching Gift Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>