force-app/main/default/objects/Opportunity/fields/nd_Matching_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>nd_Matching_Status_Notes__c</fullName>
    <label>Matching Status Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>