force-app/main/default/objects/Opportunity/fields/ND_Membership_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>ND_Membership_Credit_Date__c</fullName>
    <defaultValue>IF($RecordType.Name  &lt;&gt; &quot;Proposal&quot;, TODAY(),NULL)</defaultValue>
    <description>Field to track Membership Credit Dates</description>
    <label>Membership Credit Date</label>
    <type>Date</type>
</CustomField>