force-app/main/default/objects/Opportunity/fields/nd_Name_and_Title__c.field-meta.xml
<CustomField>
    <fullName>nd_Name_and_Title__c</fullName>
    <formula>Name + &quot; &quot; + &quot; &quot; + Title__c</formula>
    <label>Name and Title</label>
    <type>Text</type>
</CustomField>