force-app/main/default/objects/Opportunity/fields/ND_Net_Present_Value__c.field-meta.xml
<CustomField>
    <fullName>ND_Net_Present_Value__c</fullName>
    <description>Deferred Gifts and Pledges require this (Discounted Amount) at the gift level.</description>
    <inlineHelpText>Deferred Gifts and Pledges require this (Discounted Amount) at the gift level.</inlineHelpText>
    <label>Net Present Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>