force-app/main/default/objects/Opportunity/fields/nd_Note_to_Stewardship__c.field-meta.xml
<CustomField>
    <fullName>nd_Note_to_Stewardship__c</fullName>
    <label>Note to Stewardship</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>