force-app/main/default/objects/Opportunity/fields/nd_PendingDate__c.field-meta.xml
<CustomField>
    <fullName>nd_PendingDate__c</fullName>
    <description>This field holds the date when the opportunity stage was made as Pending</description>
    <inlineHelpText>This field holds the date when the opportunity stage was made as Pending</inlineHelpText>
    <label>PendingDate</label>
    <type>Date</type>
</CustomField>