force-app/main/default/objects/Opportunity/fields/ND_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>ND_Pipeline__c</fullName>
    <description>Describes where the gift came from.</description>
    <inlineHelpText>Describes where the gift came from.</inlineHelpText>
    <label>Pipeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pipeline</valueSetName>
    </valueSet>
</CustomField>