force-app/main/default/objects/Opportunity/fields/nd_PlanningDate__c.field-meta.xml
<CustomField>
    <fullName>nd_PlanningDate__c</fullName>
    <description>This field holds the date when the opportunity stage was made as Planning</description>
    <inlineHelpText>This field holds the date when the opportunity stage was made as Planning</inlineHelpText>
    <label>PlanningDate</label>
    <type>Date</type>
</CustomField>