force-app/main/default/objects/Opportunity/fields/nd_Proposal_Accout_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>nd_Proposal_Accout_Name_Formula__c</fullName>
    <description>Shows the name of the account on the proposal. Hidden system field.  Not user facing field.</description>
    <formula>Account.Name</formula>
    <label>Proposal Account Name</label>
    <type>Text</type>
</CustomField>