force-app/main/default/objects/Opportunity/fields/ND_Proposal_AutoNumber2__c.field-meta.xml
<CustomField>
    <fullName>ND_Proposal_AutoNumber2__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Proposal AutoNumber2</label>
    <type>AutoNumber</type>
</CustomField>