force-app/main/default/objects/Opportunity/fields/ND_Proposal_AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>ND_Proposal_AutoNumber__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Proposal AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>