force-app/main/default/objects/Opportunity/fields/nd_Proposal_Booked__c.field-meta.xml
<CustomField>
    <fullName>nd_Proposal_Booked__c</fullName>
    <description>Checks the Stage of Proposals associated with an Opportunity record</description>
    <formula>ISPICKVAL(ucinn_ascendv2__Proposal__r.StageName, &quot;Booked&quot;)</formula>
    <label>Proposal Booked</label>
    <type>Checkbox</type>
</CustomField>